nodejs/starwars-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: star-wars-ingress
spec:
  rules:
    - host: starwars.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: star-wars-service
                port:
                  number: 3000
